--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,25 @@
 name: Main
 
-on: push
+on:
+  push:
+    branches: 
+      - master
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
+    - name: Checkout code
+      uses: actions/checkout@v3
+    
+    - name: Create new tag
+      run: |
+        TAG_NAME="v$(date +'%Y%m%d%H%M%S')"  # Generate a timestamp-based tag
+        git tag $TAG_NAME
+        git push origin $TAG_NAME
+
+    - name: Create GitHub Release
+      uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Token to interact with GitHub API
