--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,19 +14,23 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Step 2: Set up .NET SDK (make sure to match the version of your app)
+    # Step 2: Set up .NET SDK
     - name: Set up .NET SDK
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: '6.0'  # Specify your .NET version here (e.g., '6.0', '7.0', etc.)
 
-    # Step 3: Install dependencies and build the project
+    # Step 3: Install dependencies
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore ./src/BBB1.Server/BBB1.Server.csproj  # Specify the project file path
 
-    # Step 4: Run tests
+    # Step 4: Build the project
+    - name: Build project
+      run: dotnet build ./src/BBB1.Server/BBB1.Server.csproj --configuration Release
+
+    # Step 5: Run tests
     - name: Run tests
-      run: dotnet test --no-build --verbosity normal  # Runs tests without rebuilding
+      run: dotnet test ./src/BBB1.Server/BBB1.Server.csproj --no-build --verbosity normal  # Specify the project file path
 
   release:
     runs-on: ubuntu-latest  # Run the release on a separate runner
