--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
       - master  # Trigger on push to the master branch
 
 jobs:
+
   release:
     runs-on: ubuntu-latest  # Run the release on a separate runner
     if: github.ref == 'refs/heads/master'  # Only trigger on the master branch push
@@ -29,13 +30,25 @@ jobs:
         fi
         echo "new_tag=$new_tag" >> $GITHUB_ENV
 
-    # Step 3: Create the new tag
+    # Step 3: Configure git to use GitHub token for authentication
+    - name: Configure git
+      run: |
+        git config --global user.name "github-actions"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+    # Step 4: Create the new tag
     - name: Create new Git tag
       run: |
         git tag ${{ env.new_tag }}
-        git push origin ${{ env.new_tag }}
 
-    # Step 4: Create a GitHub release
+    # Step 5: Push the tag to the repository using GITHUB_TOKEN for authentication
+    - name: Push new tag
+      run: |
+        git push https://github.com/${{ github.repository }} ${{ env.new_tag }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    # Step 6: Create a GitHub release
     - name: Create GitHub release
       uses: ncipollo/release-action@v1
       with:
@@ -43,4 +56,3 @@ jobs:
         release_name: Release ${{ env.new_tag }}
         body: |
           New release for version ${{ env.new_tag }}.
-
