--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     # Step 1: Checkout the code from the repository
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0 
 
     # Step 2: Get the latest tag from git and increment it
     - name: Get current version tag and increment
