--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,16 +22,12 @@ jobs:
     - name: Get current version tag and increment
       id: tag_version
       run: |
-        # Use 'git describe' to reliably get the latest tag
-        latest_tag=$(git describe --tags --abbrev=0)
+        latest_tag=$(git tag --sort=-v:refname | head -n 1)
         echo "latest_tag=$latest_tag"
         if [[ -z "$latest_tag" ]]; then
-          new_tag="v1.0.0"  # If no tags exist, start with v1.0.0
+          new_tag="v1.0.0"
         else
-          # Increment the patch version properly
-          IFS='.' read -r major minor patch <<< "${latest_tag//v/}"  # Remove 'v' and split into components
-          ((patch++))  # Increment the patch version
-          new_tag="v$major.$minor.$patch"  # Reassemble the version string
+          new_tag=$(echo $latest_tag | awk -F. -v OFS=. '{$NF++;print}')
         fi
         echo "new_tag=$new_tag" >> $GITHUB_ENV
 
